# GPT-SoVITS

./: .pre-commit-config.yaml  pyproject.toml  webui.py
src/: cli.py
src/gptsovits/: cli.py  cli_test.py  config.py  inference_cli.py  inference_webui.py  main.py  process_ckpt.py  test.py
src/gptsovits/AR/models/: t2s_lightning_module.py  t2s_model.py
src/gptsovits/AR/modules/: activation.py  transformer.py
src/gptsovits/f5_tts/model/: __init__.py
src/gptsovits/f5_tts/model/backbones/: dit.py  mmdit.py  unett.py
src/gptsovits/feature_extractor/: cnhubert.py
src/gptsovits/module/: attentions.py  models.py  models_onnx.py  modules.py  mrte_model.py  quantize.py
src/gptsovits/text/: __init__.py  cantonese.py  chinese.py  chinese2.py  cleaner.py  english.py
src/gptsovits/text/zh_normalization/: __init__.py
src/gptsovits/tools/: audio_sr.py  my_utils.py  slice_audio.py
src/gptsovits/tools/asr/: funasr_asr.py
src/gptsovits/tools/i18n/: i18n.py
src/gptsovits/tools/uvr5/: bsroformer.py  vr.py  webui.py
src/gptsovits/tools/uvr5/bs_roformer/: bs_roformer.py
src/module/: models.py
